--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
 <body>
     <header>
-        <div class="index d-flex position-sticky top-0">
-            <div class="logo "></div>
-            <div class="list d-flex align-items-center justify-content-evenly w-100">
-                <div class="option"><a href="#about">About</a></div>
-                <div class="option"><a href="#skills">Skills</a></div>
-                <div class="option"><a href="#projects">Projects</a></div>
-                <div class="option"><a href="#contact">Contact Me</a></div>
+        <div class="index d-flex ">
+            <div class="logo"></div>
+            <div class="list d-flex align-items-center justify-content-evenly">
+                <div class="option"><a class="text-decoration-none text-white" href="#about">About</a></div>
+                <div class="option"><a class="text-decoration-none text-white" href="#skills">Skills</a></div>
+                <div class="option"><a class="text-decoration-none text-white" href="#projects">Projects</a></div>
+                <div class="option"><a class="text-decoration-none text-white" href="#contact">Contact Me</a></div>
             </div>
         </div>
     </header>
-    <div class="intro d-flex align-items-center justify-content-evenly">
+    <div class="intro">
         <div class="text">
             <p>Hii! My name is</p>
             <h1>Bhoomi Agarwal</h1>
             <h3>HTML, CSS Developer</h3>
-            <div class="social d-flex align-items-center justify-content-evenly">
+            <div class="social">
                 <a href="https://www.linkedin.com/in/bhoomi-agarwal-58728a1ba/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Bhoomi-18"><i class="fa-brands fa-github"></i></a>
                 <a href="https://mail.google.com/mail/#inbox?compose=CllgCJTNqrXrJtmRBvgQZSppRpjWgkMNhzcMCJZKMVqknKTLztgdlfnPtHPvNCmGGmcrhswHTdq"><i class="fa-solid fa-envelope"></i></a>
             </div>
-                <button id="resume"><a href="Bhoomi Agarwal- Resume.pdf" download="Bhoomi Agarwal">Resume<i class="fa-solid fa-arrow-down"></i></a></button>
+                <button id="resume"><a class="text-decoration-none text-white" href="Bhoomi Agarwal- Resume.pdf" download="Bhoomi Agarwal">Resume<i class="fa-solid fa-arrow-down"></i></a></button>
             </div>
         <div class="pic"></div>
     </div>
@@ -38,7 +38,7 @@
     <main>
         <div id="about">
             <h1>About</h1>
-            <div class="about-box d-flex align-items-center justify-content-evenly">
+            <div class="about-box">
                 <div class="about-pic"></div>
                 <div class="about-text">
                     <p>Hii, I am Bhoomi, a budding frontend developer and a keen learner of web technologies.</p>
@@ -49,7 +49,7 @@
 
         <div id="skills">
             <h1>Skills</h1>
-            <div class="skills-box d-flex align-items-center justify-content-evenly">
+            <div class="skills-box">
                 <div class="s-text">
                     <div class="s-logo"><i class="fa-brands fa-square-js"></i></div><br>
                     <div class="label">JavaScript</div>    
@@ -75,39 +75,30 @@
 
         <div id="projects">
             <h1>My Works</h1>
-            <div class="project-box d-flex align-items-center justify-content-evenly">
-                <div class="box">
-                    <div class="works part1">
-                        <div class="work-link"><a href="https://github.com/Bhoomi-18/Calculator">See Project</a></div>
-                    </div>
+            <div class="project-box">
+                <div class="works part1">
+                    <div class="work-link"><a class="text-decoration-none text-white" href="https://github.com/Bhoomi-18?tab=repositories">See Project</a></div>
                 </div>
-                <div class="box">
-                    <div class="works part2">
-                        <div class="work-link"><a href="https://github.com/Bhoomi-18/Landing_Page">See Project</a></div>
-                    </div>
+                <div class="works part2">
+                    <div class="work-link"><a class="text-decoration-none text-white" href="https://github.com/Bhoomi-18?tab=repositories">See Project</a></div>
                 </div>
-                <div class="box">
-                    <div class="works part3">
-                        <div class="work-link"><a href="https://github.com/Bhoomi-18/JS_Games/tree/main/tic%20tac%20toe">See Project</a></div>
-                    </div>
+                <div class="works part3">
+                    <div class="work-link"><a class="text-decoration-none text-white" href="https://github.com/Bhoomi-18?tab=repositories">See Project</a></div>
                 </div>
-                <div class="box">
-                    <div class="works part4">
-                        <div class="work-link"><a href="https://github.com/Bhoomi-18/Amazon_clone">See Project</a></div>
-                    </div>
+                <div class="works part4">
+                    <div class="work-link"><a class="text-decoration-none text-white" href="https://github.com/Bhoomi-18?tab=repositories">See Project</a></div>
                 </div>
-                
             </div>
         </div>
 
         <div id="contact">
             <h1>Connect with Me</h1>
-            <div class="contact-form d-flex align-items-center justify-content-evenly">
+            <div class="contact-form">
                 <form>
-                    <input id="your-name" required type="text" placeholder="Enter Your Name">
-                    <input id="email" required type="email" placeholder="Enter Email Id">
+                    <input id="your-name" type="text" placeholder="Enter Your Name">
+                    <input id="email" type="email" placeholder="Enter Email Id">
                     <br>
-                    <input id="message" required type="text" placeholder="Your Message">
+                    <input id="message" type="text" placeholder="Your Message">
                     <br>
                     <button id="submit">Submit</button>
                 </form>
@@ -116,7 +107,7 @@
 
     </main>
     
-    <footer class="text-centre">
+    <footer>
         <div class="copyright">© Copyright belongs to the owner Bhoomi Agarwal</div>
     </footer>
 </body>
